# kcm-distrobox

./: CMakeLists.txt  kcm-distrobox.qrc
src/: CMakeLists.txt  DistroboxBackend.cpp  DistroboxBackend.h  DistroboxModule.cpp  DistroboxModule.h  PackageHelper.cpp  PackageHelper.h  distrobox.cpp  distrobox.h  kcm_distrobox.json
src/ui/: AddBoxDialog.qml  ExportApps.qml  OpenPackage.qml  main.qml
